Increase Navbar z-index to fix stacking with BeyondTheCode

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,7 +12,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: space-around;
   align-items: center;
